# DCL_ROSIntegration

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  ROSIntegrationConfig.cmake.in
src/Components/: CMakeLists.txt
src/Components/ImageSubscriber/: CMakeLists.txt  ImageSubscriber.cpp  ImageSubscriber.hpp
src/Components/RecognizedObjectPublisher/: CMakeLists.txt  RecognizedObjectPublisher.cpp  RecognizedObjectPublisher.hpp
src/Components/RecognizedObjectSubscriber/: CMakeLists.txt  RecognizedObjectSubscriber.cpp  RecognizedObjectSubscriber.hpp
src/Types/: CMakeLists.txt
tasks/: ImageSubscriber.xml
